--- a/stocks-service/pom.xml
+++ b/stocks-service/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dybal</groupId>
-	<artifactId>stock-service</artifactId>
+	<artifactId>stocks-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>stock-service</name>
 	<description>Spring Boot project for stock-service</description>
