--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>products-service</module>
-        <module>stocks-service</module>
-        <module>orders-service</module>
+        <module>product-service</module>
+        <module>stock-service</module>
+        <module>order-service</module>
     </modules>
 
     <properties>
