--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dybal</groupId>
-	<artifactId>products-service</artifactId>
+	<artifactId>product-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>product-service</name>
-	<description>Product Service for Spring Boot</description>
+	<description>Spring Boot project for product-service.</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
