--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
